# demo_rgbd_slimmed

./: CMakeLists.txt  README  demo_rgbd_slimmed.launch  demo_rgbd_slimmed.rviz  demo_rgbd_slimmed.vcg  manifest.xml  package.xml  stack.xml
src/: featureTracking.cpp  featureTracking.cpp~  processDepthmap.cpp  visualOdometry.cpp
